# ismip-indexing

./: .dockerignore  .gitignore  DEPLOY_CLOUD_RUN.md  Dockerfile  README.md  app.py  config.yaml  config_loader.py  generate_html_site.py  grid_utils.py  interactive_comparison.ipynb  ismip6_experiments.yaml  ismip6_index.py  plot_file_sizes.py  pyproject.toml  working_with_ismip6_examples.ipynb
.github/workflows/: deploy-cloud-run.yml  deploy-pages.yml
app_components/: data_loader.py  plot_panel.py  sidebar.py
ismip6_comparison_app/: __init__.py  app.py  config_loader.py
ismip6_comparison_app/components/: __init__.py  data_loader.py  markdown_page.py  plot_panel.py  sidebar.py
ismip6_comparison_app/static_content/: about.md  plausible-analytics.js
ismip6_helper/: __init__.py  grid_utils.py  time_utils.py
ismip_metadata/: variables.yaml
notebooks/: working_with_ismip6_examples.ipynb
notebooks/external_data/ismip6_computed_scalars/: README.md
static_content/: about.md  example_comparisons.md
