[project]
name = "ismip-comparison-tool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.9.0",
    "gcsfs>=2025.9.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.0",
    "scipy>=1.16.2",
    "xarray>=2025.10.1",
]
