[project]
name = "ismip-comparison-tool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.9.0",
    "gcsfs>=2025.9.0",
    "h5netcdf>=1.7.3",
    "holoviews>=1.19.0",
    "hvplot>=0.10.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.0",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.0",
    "pyyaml>=6.0.0",
    "scipy>=1.16.2",
    "xarray>=2025.10.1",
]
